# kv-downloader

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
.zed/: debug.json
src/: download_progress.rs  driver.rs  keystore.rs  lib.rs  main.rs  prompt.rs
src/commands/: auth.rs  download.rs  logout.rs  mod.rs
src/tasks/: download_song.rs  mod.rs  sign_in.rs
tests/: download_songs.rs  server.rs
tests/fixtures/: cherub-rock.html
