[package]
name = "kv-downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
dotenv = "0.15.0"
headless_chrome = { version = "1.0.12", features = ["fetch"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.2"
keyring = { version = "3", features = [
    "apple-native",
    "windows-native",
    "sync-secret-service",
] }
serde = "1.0.204"
serde_json = "1.0.122"
